--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,8 @@
 			"extensions": [
 				"ms-vscode.cpptools",
 				"ms-vscode.cmake-tools",
-				"ms-vscode.cpptools-extension-pack"				
+				"ms-vscode.cpptools-extension-pack",
+				"jeff-hykin.better-cpp-syntax"
 			]
 		}
 	},
